--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape",
   "description": "Backend for OyasaiServer <baakun.com>",
-  "version": "0.0.5",
+  "version": "0.0.4",
   "private": true,
   "author": "Shun Ueda <shu225@lehigh.edu>",
   "license": "MIT",
@@ -51,7 +51,7 @@
     "prettier": "2.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "webpack": "latest",
+    "webpack": "^5.49.0",
     "webpack-cli": "^4.7.2"
   },
   "config": {
