--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape",
   "description": "Backend for OyasaiServer <baakun.com>",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "private": true,
   "author": "Shun Ueda <shu225@lehigh.edu>",
   "license": "MIT",
@@ -43,6 +43,7 @@
     "eslint": "^7.32.0",
     "gts": "^3.1.0",
     "husky": "7.0.1",
+    "json-loader": "^0.5.7",
     "lint-staged": "11.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
