--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - name: Check output
+        env:
+          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ steps.vars.outputs.tag }}
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -35,8 +44,8 @@ jobs:
       - uses: actions/create-release@v1
         id: create_release
         with:
-          tag_name: ${{ github.ref}}
-          release_name: Release v${{ github.ref}}
+          tag_name: ${{ steps.vars.outputs.tag}}
+          release_name: Release ${{ steps.vars.outputs.tag}}
           draft: false
           prerelease: false
         env:
