--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape",
   "description": "Backend for OyasaiServer <baakun.com>",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "private": true,
   "author": "Shun Ueda <shu225@lehigh.edu>",
   "license": "MIT",
@@ -29,13 +29,15 @@
   },
   "dependencies": {
     "download": "^8.0.0",
-    "ora": "^5.4.1"
+    "ora": "^5.4.1",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
     "@types/download": "^8.0.1",
     "@types/node": "^16.4.13",
+    "@types/socket.io": "^3.0.2",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
