--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape",
   "description": "Backend for OyasaiServer <baakun.com>",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "private": true,
   "author": "Shun Ueda <shu225@lehigh.edu>",
   "license": "MIT",
@@ -38,6 +38,8 @@
     "@types/download": "^8.0.1",
     "@types/node": "^16.4.13",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/webpack-node-externals": "^2.5.2",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.32.0",
@@ -47,10 +49,12 @@
     "lint-staged": "11.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
+    "socket.io-client": "^4.1.3",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "config": {
     "commitizen": {
