--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grape",
   "description": "Backend for OyasaiServer <baakun.com>",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "private": true,
   "author": "Shun Ueda <shu225@lehigh.edu>",
   "license": "MIT",
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "download": "^8.0.0",
+    "minecraft-server-util": "^3.5.2",
     "ora": "^5.4.1",
     "socket.io": "^4.1.3"
   },
