--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,55 +1,66 @@
 name: Release
 
 on:
-  push:
-    branches: [ main ]
+    push:
+        tags:
+            - 'v*'
+    pull_request:
+        tags:
+            - 'v*'
+
 jobs:
-  build:
+    build:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
+        strategy:
+            matrix:
+                node-version: [16.x]
 
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '16'
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: |
-          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
-          yarn compile
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
-      - uses: actions/create-release@v1
-        id: create_release
-        with:
-          tag_name: v${{ steps.package-version.outputs.current-version}}
-          release_name: Release v${{ steps.package-version.outputs.current-version}}.
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifacts/index.js
-          asset_name: index.js
-          asset_content_type: text/javascript
-      - uses: actions/upload-release-asset@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: ./plugin/build/libs/Grape.jar
-            asset_name: Grape.jar
-            asset_content_type: application/java-archive
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set output
+              id: vars
+              run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+            - name: Check output
+              env:
+                  RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
+              run: |
+                  echo $RELEASE_VERSION
+                  echo ${{ steps.vars.outputs.tag }}
+            - uses: actions/setup-java@v2
+              with:
+                  distribution: 'zulu'
+                  java-version: '16'
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - run: |
+                  YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
+                  yarn compile
+            - uses: actions/create-release@v1
+              id: create_release
+              with:
+                  tag_name: ${{ steps.vars.outputs.tag}}
+                  release_name: Release ${{ steps.vars.outputs.tag}}
+                  draft: false
+                  prerelease: false
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - uses: actions/upload-release-asset@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  upload_url: ${{ steps.create_release.outputs.upload_url }}
+                  asset_path: ./artifacts/index.js
+                  asset_name: index.js
+                  asset_content_type: text/javascript
+            - uses: actions/upload-release-asset@v1
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  upload_url: ${{ steps.create_release.outputs.upload_url }}
+                  asset_path: ./plugin/build/libs/Grape.jar
+                  asset_name: Grape.jar
+                  asset_content_type: application/java-archive
